## 5.6.1

- Improved: error logging feature
- Improved: maximum tilt effect intensity
- Improved: settings layout for large screens
- Fixed: hopefully a big crash cause in the rendering algorithm

! Please report any crash so I can fix them! Crash log should be available at <b>Other options</b> > <b>Display logcat</b>.

## 5.6.0

- New: zoom-in effect for lockscreen instead of zoom-out (can be switched in size section)
- New: separate swipe and tilt effect intensity controls
- New: interval selection for random wallpaper design option
- New: screen-off delay for Always On Display transition in "Other options" section
- New: logging section for debugging purposes
- Improved: Android 11 system zoom option removed as the integrated zoom effect is no longer jerky when tilt effect is enabled
- Improved: workaround for Samsung's implementation of dynamic colors
- Improved: 2-ring support for 24H clock in daily random time selection
- Improved: display refresh rate handling when battery saver is enabled
- Improved: app language selection
- Improved: unified logo experience
- Fixed: jerky zoom animation when tilt effect was turned on (finally!)
- Fixed: occasional glitch during zoom animation after unlocking
- Fixed: invisible One UI workaround on some Samsung devices

## 5.5.1

- New: option for sliding transition between settings pages and workaround for bug with blank settings subpages in help dialog
- Improved: syncing of wallpaper design preferences when wallpaper is active
- Improved: random wallpaper design options
- Improved: custom color selection for extracted colors
- Improved: disabled auto backup of settings through Google Drive because different devices require different configurations
- Fixed: changed random wallpaper design when toggling dark mode and after device restart
- Fixed: internal cleanup of wallpaper engine and a few potential crash fixes
- Fixed: bug in language selection caused by duplicated code

## 5.5.0
